# mailbuffet

./: .gitignore  README.md  mailbuffet.ipynb  mailbuffet.py  pyproject.toml  requirements.txt
